--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main>
             <!- SECCION DE ENTRADA DE TEXTO................. ->
             <section>
-                    <textarea  class="text-area-entrada" cols="70" rows="10" required placeholder="Escriba aqui mensaje a emcriptar sin mayusculas ni tildes"></textarea>
+                    <textarea  class="text-area-entrada" cols="48%" rows="20%" required placeholder="Escriba aqui mensaje a emcriptar sin mayusculas ni tildes"></textarea>
                 <div>
                     <button class="btn-emcriptar" onclick="btnEncriptar()">Emcriptar</button>
                     <button class="btn-desemcriptar" onclick="btnDesencriptar()">Desemcriptar</button>
@@ -28,7 +28,7 @@
 
             <!- SECCION DE ENTRADA SALIDA DE TEXTO................. ->
             <section>
-                    <textarea class="text-area-salida" cols="70" rows="10" ></textarea>
+                    <textarea class="text-area-salida" cols="48%" rows="20%" ></textarea>
                 <div>
                     <button class="btn-copiar" onclick="btnCopiar()">Copiar</button>
                 </div>   
